--- a/languages/mtps-fi.po
+++ b/languages/mtps-fi.po
@@ -4,26 +4,26 @@ msgid ""
 msgstr ""
 "Project-Id-Version: MEOM Gutenberg blocks 1.0.0\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/meom-gutenberg\n"
-"POT-Creation-Date: 2021-03-11 22:12+0200\n"
-"PO-Revision-Date: 2021-03-11 22:12+0200\n"
+"POT-Creation-Date: 2024-05-14 22:51+0300\n"
+"PO-Revision-Date: 2024-05-14 22:52+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: fi\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 "X-Poedit-KeywordsList: __;_e;_x:1,2c;_ex:1,2c;_n:1,2;_nx:1,2,4c;_n_noop:1,2;"
 "_nx_noop:1,2,3c;esc_attr__;esc_html__;esc_attr_e;esc_html_e;esc_attr_x:1,2c;"
 "esc_html_x:1,2c\n"
 "X-Poedit-Basepath: ..\n"
 "X-Textdomain-Support: yes\n"
-"X-Generator: Poedit 2.4.2\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Poedit 3.4.1\n"
 "X-Poedit-SearchPath-0: .\n"
 "X-Poedit-SearchPathExcluded-0: node_modules\n"
 
-#: src/dashboard.php:16 src/dashboard.php:93
+#: src/dashboard.php:16 src/dashboard.php:113
 msgid "MEOM 3rd party scripts"
 msgstr "MEOM kolmannen osapuolen skriptit"
 
@@ -43,7 +43,15 @@ msgstr ""
 msgid "Cookiebot ID"
 msgstr ""
 
-#: src/dashboard.php:82
+#: src/dashboard.php:52
+msgid "Do not add Cookiebot code to the head"
+msgstr "Älä laita Cookiebotin koodia headiin"
+
+#: src/dashboard.php:92
+msgid "You can still use shortcode"
+msgstr "Voit silti käyttää lyhytkoodia"
+
+#: src/dashboard.php:102
 msgid ""
 "Add IDs for the services and the theme will include needed scripts to the "
 "page."
